templates/ondat-operator_template.yaml
---
# Source: ondat-operator/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ondat-operator
    app.kubernetes.io/component: operator
    control-plane: controller-manager
    chart: ondat-operator-0.7.4
    release: release-name
    heritage: Helm
  name: storageos-operator
  namespace: default
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app: ondat-operator
    app.kubernetes.io/component: operator
    control-plane: controller-manager
---
# Source: ondat-operator/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ondat-operator
    app.kubernetes.io/component: operator
    chart: ondat-operator-0.7.4
    release: release-name
    heritage: Helm
  name: storageos-operator-webhook
  namespace: default
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app: ondat-operator
    app.kubernetes.io/component: operator
    control-plane: controller-manager
---
# Source: ondat-operator/templates/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-ondat-operator
  namespace: default
  labels:
    app: ondat-operator
    app.kubernetes.io/component: operator
    control-plane: controller-manager
    chart: ondat-operator-0.7.4
    release: release-name
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ondat-operator
      app.kubernetes.io/component: operator
      control-plane: controller-manager
      release: release-name
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app: ondat-operator
        app.kubernetes.io/component: operator
        control-plane: controller-manager
        release: release-name
    spec:
      containers:
      - args:
        - --config=operator_config.yaml
        command:
        - /manager
        image: "docker.io/storageos/operator:v2.10.0"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 250m
          requests:
            cpu: 10m
            memory: 600Mi
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /operator_config.yaml
          name: storageos-operator
          subPath: operator_config.yaml
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=10
        image: "quay.io/brancz/kube-rbac-proxy:v0.10.0"
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
      securityContext:
        runAsUser: 65532
      serviceAccountName: storageos-operator
      terminationGracePeriodSeconds: 10
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app.kubernetes.io/component: operator
            app: ondat-operator
        maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
      volumes:
      - configMap:
          name: storageos-operator
        name: storageos-operator
---
# Source: ondat-operator/templates/validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  labels:
    app: ondat-operator
    app.kubernetes.io/component: operator
    chart: ondat-operator-0.7.4
    release: release-name
    heritage: Helm
  name: storageos-operator-validating-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: storageos-operator-webhook
      namespace: default
      path: /validate-storageoscluster
  failurePolicy: Ignore
  name: cluster-validator.storageos.com
  rules:
  - apiGroups:
    - storageos.com
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - storageosclusters
  sideEffects: None
